# 3DeeCellTracker

./: 3DCT-CPU.yml  3DCT.yml  3D_U_Net_training-clear.ipynb  LICENSE  LOG.MD  README.md  ensemble_mode_worm4-clear.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  single_mode_worm1-clear.ipynb
.binder/: apt.txt  environment.yml
CellTracker/: analyses.py  coord_image_transformer.py  experiment.py  extract_cell_signals.py  ffn.py  flexi_point_net.py  fpm.py  global_match.py  interpolate_labels.py  match_ids.py  plot.py  preprocess.py  ransac_loess.py  robust_match.py  segmentation_inspector.py  simple_alignment.py  stardist3dcustom.py  stardistwrapper.py  synthesize.py  synthesize_deformation.py  test_matching_models.py  track.py  tracker.py  tracker_robust.py  trackerlite.py  unet3d.py  utils.py  watershed.py
CellTracker/v1_modules/: ffn.py  preprocess.py  tracker.py  unet3d.py  watershed.py
Deprecated_programs/: Guide for parameters.md  README.md
Deprecated_programs/FFNTraining/: FFNTraining.py
Deprecated_programs/Tracking/: Ensemble_mode.py  cell_segment_track.py
Deprecated_programs/UnetTraining/: unet_training.py
Doc/: Enviroment.md  Guide for parameters.md  sphinx_setup.txt
Doc/source/: API.rst  CellTracker.rst  User_Guide.rst  conf.py  index.rst  modules.rst
Examples/: 3D_U_Net_training-clear.ipynb  StarDist_3D_training.ipynb  Train_StarDist3D-worm4.ipynb  Train_StarDist3D.ipynb  ensemble_mode_worm4-clear.ipynb  pointset_t2.csv  single_mode_worm1-clear.ipynb  single_mode_worm1-stardist.ipynb  single_mode_worm4-stardist.ipynb  train_ffn-worm4.ipynb  train_ffn.ipynb
Examples/ID_link/: ID_Link.ipynb  Mannual_inspection_links.ipynb  manual_correction.py
Examples/use_fpm_stardist/: Test_matching_models_fpm.ipynb  train_fpn_with_coordinates_csv_modelsA.ipynb  train_fpn_with_coordinates_csv_modelsB.ipynb  train_fpn_with_coordinates_csv_modelsC.ipynb  train_fpn_with_coordinates_csv_modelsD.ipynb
Examples/use_stardist/: track_stardist_ensemble_mode-h5.ipynb  track_stardist_ensemble_mode.ipynb  track_stardist_single_mode-h5.ipynb  track_stardist_single_mode.ipynb  track_worm1_stardist_single_mode.ipynb  track_worm4_stardist_ensemble_mode.ipynb  train_ffn_with_coordinates_csv.ipynb  train_ffn_with_label_image.ipynb  train_stardist.ipynb  worm3_points_t1.csv
Examples/use_unet/: 3D_U_Net_training-clear.ipynb  ensemble_mode_worm4-clear.ipynb  single_mode_worm1-clear.ipynb
FFNTraining/: FFNTraining.py
FFNTraining/CellTracker/: interpolate_labels.py  preprocess.py  track.py  unet3d.py  watershed.py
Tracking/: README.md  cell_segment_track.py
Tracking_notebooks/: ensemble_mode_worm4.ipynb  single_mode_worm1.ipynb
UnetTraining/: unet_training.py
(+1402 files in other folders)
