[metadata]
name = 3DeeCellTracker
version = 1.0.0
author = Chentao Wen
author_email = chintou.on@gmail.com
description = A package for tracking cells in 3D time lapse images in deforming organs or moving animals
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WenChentao/3DeeCellTracker

classifiers =
    Programming Language :: Python
    Environment :: GPU :: NVIDIA CUDA

[options]
packages = find:
install_requires =
    numpy==1.22.3
    scikit-learn==1.1.2
    tifffile==2023.2.28
    tqdm==4.64.0
    matplotlib==3.5.1
    scipy==1.8.0
    pillow==9.3.0
    scikit-image==0.19.3
    stardist==0.8.3
    notebook==6.4.12

python_requires = >=3.8