[metadata]
name = 3DeeCellTracker
version = 1.0.0
author = Chentao Wen
author_email = chintou.on@gmail.com
description = A package for tracking cells in 3D time lapse images in deforming organs or moving animals
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WenChentao/3DeeCellTracker

classifiers =
    Programming Language :: Python
    Environment :: GPU :: NVIDIA CUDA

[options]
packages = find:
install_requires =
    tensorflow==2.5.0
    stardist==0.8.3
    scikit-learn==1.1.2
    notebook==6.0.0

python_requires = >=3.6